[package]
name = "playground"
version = "0.0.1"
authors = ["The Rust Playground"]
resolver = "2"
[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
incremental = false
[dependencies.addr2line]
package = "addr2line"
version = "=0.17.0"

[dependencies.adler]
package = "adler"
version = "=1.0.2"

[dependencies.adler32]
package = "adler32"
version = "=1.2.0"

[dependencies.ahash]
package = "ahash"
version = "=0.7.6"

[dependencies.aho_corasick]
package = "aho-corasick"
version = "=0.7.18"

[dependencies.ansi_term]
package = "ansi_term"
version = "=0.12.1"

[dependencies.anyhow]
package = "anyhow"
version = "=1.0.56"

[dependencies.approx]
package = "approx"
version = "=0.5.1"

[dependencies.arc_swap]
package = "arc-swap"
version = "=0.4.8"

[dependencies.arrayvec]
package = "arrayvec"
version = "=0.7.2"

[dependencies.async_recursion]
package = "async-recursion"
version = "=1.0.0"

[dependencies.async_trait]
package = "async-trait"
version = "=0.1.52"

[dependencies.atty]
package = "atty"
version = "=0.2.14"

[dependencies.autocfg]
package = "autocfg"
version = "=1.1.0"

[dependencies.backtrace]
package = "backtrace"
version = "=0.3.64"

[dependencies.base64]
package = "base64"
version = "=0.13.0"

[dependencies.bit_field]
package = "bit_field"
version = "=0.10.1"

[dependencies.bit_set]
package = "bit-set"
version = "=0.5.2"

[dependencies.bit_vec]
package = "bit-vec"
version = "=0.6.3"

[dependencies.bitflags]
package = "bitflags"
version = "=1.3.2"

[dependencies.block_buffer]
package = "block-buffer"
version = "=0.10.2"

[dependencies.bstr]
package = "bstr"
version = "=0.2.17"

[dependencies.bytemuck]
package = "bytemuck"
version = "=1.8.0"
features = ["derive", "extern_crate_alloc", "extern_crate_std", "min_const_generics", "wasm_simd", "zeroable_maybe_uninit"]

[dependencies.byteorder]
package = "byteorder"
version = "=1.4.3"

[dependencies.bytes]
package = "bytes"
version = "=1.1.0"

[dependencies.cc]
package = "cc"
version = "=1.0.73"

[dependencies.cfg_if]
package = "cfg-if"
version = "=1.0.0"

[dependencies.chrono]
package = "chrono"
version = "=0.4.19"
features = ["serde"]

[dependencies.clap]
package = "clap"
version = "=3.1.6"
features = ["unstable-doc"]

[dependencies.color_quant]
package = "color_quant"
version = "=1.1.0"

[dependencies.cpufeatures]
package = "cpufeatures"
version = "=0.2.2"

[dependencies.crc32fast]
package = "crc32fast"
version = "=1.3.2"

[dependencies.crossbeam]
package = "crossbeam"
version = "=0.8.1"

[dependencies.crossbeam_channel]
package = "crossbeam-channel"
version = "=0.5.4"

[dependencies.crossbeam_deque]
package = "crossbeam-deque"
version = "=0.8.1"

[dependencies.crossbeam_epoch]
package = "crossbeam-epoch"
version = "=0.9.8"

[dependencies.crossbeam_queue]
package = "crossbeam-queue"
version = "=0.3.5"

[dependencies.crossbeam_utils]
package = "crossbeam-utils"
version = "=0.8.8"

[dependencies.crypto_common]
package = "crypto-common"
version = "=0.1.3"

[dependencies.csv]
package = "csv"
version = "=1.1.6"

[dependencies.csv_core]
package = "csv-core"
version = "=0.1.10"

[dependencies.data_encoding]
package = "data-encoding"
version = "=2.3.2"

[dependencies.debug_unreachable]
package = "new_debug_unreachable"
version = "=1.0.4"

[dependencies.deflate]
package = "deflate"
version = "=1.0.0"

[dependencies.derivative]
package = "derivative"
version = "=2.2.0"

[dependencies.digest]
package = "digest"
version = "=0.10.3"

[dependencies.either]
package = "either"
version = "=1.6.1"

[dependencies.encoding_rs]
package = "encoding_rs"
version = "=0.8.30"

[dependencies.env_logger]
package = "env_logger"
version = "=0.9.0"

[dependencies.error_chain]
package = "error-chain"
version = "=0.12.4"

[dependencies.exr]
package = "exr"
version = "=1.4.1"

[dependencies.fallible_iterator]
package = "fallible-iterator"
version = "=0.2.0"

[dependencies.fallible_streaming_iterator]
package = "fallible-streaming-iterator"
version = "=0.1.9"

[dependencies.fastrand]
package = "fastrand"
version = "=1.7.0"

[dependencies.filetime]
package = "filetime"
version = "=0.2.15"

[dependencies.fixedbitset]
package = "fixedbitset"
version = "=0.4.1"

[dependencies.flate2]
package = "flate2"
version = "=1.0.22"

[dependencies.flume]
package = "flume"
version = "=0.10.12"

[dependencies.fnv]
package = "fnv"
version = "=1.0.7"

[dependencies.foreign_types]
package = "foreign-types"
version = "=0.3.2"

[dependencies.foreign_types_shared]
package = "foreign-types-shared"
version = "=0.1.1"

[dependencies.form_urlencoded]
package = "form_urlencoded"
version = "=1.0.1"

[dependencies.futf]
package = "futf"
version = "=0.1.5"

[dependencies.futures]
package = "futures"
version = "=0.3.21"
features = ["compat", "io-compat", "thread-pool"]

[dependencies.futures_channel]
package = "futures-channel"
version = "=0.3.21"

[dependencies.futures_core]
package = "futures-core"
version = "=0.3.21"

[dependencies.futures_executor]
package = "futures-executor"
version = "=0.3.21"

[dependencies.futures_io]
package = "futures-io"
version = "=0.3.21"

[dependencies.futures_macro]
package = "futures-macro"
version = "=0.3.21"

[dependencies.futures_sink]
package = "futures-sink"
version = "=0.3.21"

[dependencies.futures_task]
package = "futures-task"
version = "=0.3.21"

[dependencies.futures_util]
package = "futures-util"
version = "=0.3.21"

[dependencies.generic_array]
package = "generic-array"
version = "=0.14.5"

[dependencies.getrandom]
package = "getrandom"
version = "=0.2.5"

[dependencies.getrandom_0_1_16]
package = "getrandom"
version = "=0.1.16"

[dependencies.gif]
package = "gif"
version = "=0.11.3"

[dependencies.gimli]
package = "gimli"
version = "=0.26.1"

[dependencies.glob]
package = "glob"
version = "=0.3.0"

[dependencies.h2]
package = "h2"
version = "=0.3.12"

[dependencies.half]
package = "half"
version = "=1.8.2"

[dependencies.hashbrown]
package = "hashbrown"
version = "=0.12.0"

[dependencies.hashbrown_0_11_2]
package = "hashbrown"
version = "=0.11.2"

[dependencies.hashlink]
package = "hashlink"
version = "=0.7.0"

[dependencies.heck]
package = "heck"
version = "=0.4.0"

[dependencies.hmac]
package = "hmac"
version = "=0.12.1"

[dependencies.html5ever]
package = "html5ever"
version = "=0.25.2"

[dependencies.http]
package = "http"
version = "=0.2.6"

[dependencies.http_body]
package = "http-body"
version = "=0.4.4"

[dependencies.httparse]
package = "httparse"
version = "=1.6.0"

[dependencies.httpdate]
package = "httpdate"
version = "=1.0.2"

[dependencies.humantime]
package = "humantime"
version = "=2.1.0"

[dependencies.hyper]
package = "hyper"
version = "=0.14.18"
features = ["full"]

[dependencies.hyper_tls]
package = "hyper-tls"
version = "=0.5.0"

[dependencies.idna]
package = "idna"
version = "=0.2.3"

[dependencies.image]
package = "image"
version = "=0.24.1"

[dependencies.indexmap]
package = "indexmap"
version = "=1.8.0"

[dependencies.inflate]
package = "inflate"
version = "=0.4.5"

[dependencies.instant]
package = "instant"
version = "=0.1.12"

[dependencies.ipnet]
package = "ipnet"
version = "=2.4.0"

[dependencies.itertools]
package = "itertools"
version = "=0.10.3"

[dependencies.itoa]
package = "itoa"
version = "=1.0.1"

[dependencies.itoa_0_4_8]
package = "itoa"
version = "=0.4.8"

[dependencies.jpeg_decoder]
package = "jpeg-decoder"
version = "=0.2.2"

[dependencies.jpeg_decoder_0_1_22]
package = "jpeg-decoder"
version = "=0.1.22"

[dependencies.lazy_static]
package = "lazy_static"
version = "=1.4.0"

[dependencies.lebe]
package = "lebe"
version = "=0.5.1"

[dependencies.libc]
package = "libc"
version = "=0.2.121"

[dependencies.libm]
package = "libm"
version = "=0.2.2"

[dependencies.libsqlite3_sys]
package = "libsqlite3-sys"
version = "=0.24.1"

[dependencies.linked_hash_map]
package = "linked-hash-map"
version = "=0.5.4"

[dependencies.lock_api]
package = "lock_api"
version = "=0.4.6"

[dependencies.log]
package = "log"
version = "=0.4.16"

[dependencies.log4rs]
package = "log4rs"
version = "=1.0.0"

[dependencies.log_mdc]
package = "log-mdc"
version = "=0.1.0"

[dependencies.mac]
package = "mac"
version = "=0.1.1"

[dependencies.markup5ever]
package = "markup5ever"
version = "=0.10.1"

[dependencies.markup5ever_rcdom]
package = "markup5ever_rcdom"
version = "=0.1.0"

[dependencies.matches]
package = "matches"
version = "=0.1.9"

[dependencies.matrixmultiply]
package = "matrixmultiply"
version = "=0.3.2"

[dependencies.md5]
package = "md-5"
version = "=0.10.1"

[dependencies.memchr]
package = "memchr"
version = "=2.4.1"

[dependencies.memmap]
package = "memmap"
version = "=0.7.0"

[dependencies.memoffset]
package = "memoffset"
version = "=0.6.5"

[dependencies.mime]
package = "mime"
version = "=0.3.16"

[dependencies.miniz_oxide]
package = "miniz_oxide"
version = "=0.5.1"

[dependencies.miniz_oxide_0_4_4]
package = "miniz_oxide"
version = "=0.4.4"

[dependencies.mio]
package = "mio"
version = "=0.8.2"
features = ["net", "os-ext", "os-poll"]

[dependencies.nalgebra]
package = "nalgebra"
version = "=0.30.1"

[dependencies.nalgebra_macros]
package = "nalgebra-macros"
version = "=0.1.0"

[dependencies.nanorand]
package = "nanorand"
version = "=0.7.0"

[dependencies.native_tls]
package = "native-tls"
version = "=0.2.8"

[dependencies.ndarray]
package = "ndarray"
version = "=0.15.4"

[dependencies.num]
package = "num"
version = "=0.4.0"

[dependencies.num_bigint]
package = "num-bigint"
version = "=0.4.3"

[dependencies.num_complex]
package = "num-complex"
version = "=0.4.0"

[dependencies.num_cpus]
package = "num_cpus"
version = "=1.13.1"

[dependencies.num_integer]
package = "num-integer"
version = "=0.1.44"

[dependencies.num_iter]
package = "num-iter"
version = "=0.1.42"

[dependencies.num_rational]
package = "num-rational"
version = "=0.4.0"

[dependencies.num_threads]
package = "num_threads"
version = "=0.1.5"

[dependencies.num_traits]
package = "num-traits"
version = "=0.2.14"

[dependencies.object]
package = "object"
version = "=0.27.1"

[dependencies.once_cell]
package = "once_cell"
version = "=1.10.0"

[dependencies.opaque_debug]
package = "opaque-debug"
version = "=0.3.0"

[dependencies.openssl]
package = "openssl"
version = "=0.10.38"

[dependencies.openssl_probe]
package = "openssl-probe"
version = "=0.1.5"

[dependencies.openssl_sys]
package = "openssl-sys"
version = "=0.9.72"

[dependencies.ordered_float]
package = "ordered-float"
version = "=2.10.0"

[dependencies.os_str_bytes]
package = "os_str_bytes"
version = "=6.0.0"

[dependencies.parking_lot]
package = "parking_lot"
version = "=0.12.0"

[dependencies.parking_lot_0_11_2]
package = "parking_lot"
version = "=0.11.2"

[dependencies.parking_lot_core]
package = "parking_lot_core"
version = "=0.9.1"

[dependencies.parking_lot_core_0_8_5]
package = "parking_lot_core"
version = "=0.8.5"

[dependencies.paste]
package = "paste"
version = "=1.0.6"

[dependencies.percent_encoding]
package = "percent-encoding"
version = "=2.1.0"

[dependencies.pest]
package = "pest"
version = "=2.1.3"

[dependencies.petgraph]
package = "petgraph"
version = "=0.6.0"

[dependencies.phf]
package = "phf"
version = "=0.10.1"

[dependencies.phf_0_8_0]
package = "phf"
version = "=0.8.0"

[dependencies.phf_codegen]
package = "phf_codegen"
version = "=0.8.0"

[dependencies.phf_generator]
package = "phf_generator"
version = "=0.8.0"

[dependencies.phf_shared]
package = "phf_shared"
version = "=0.10.0"

[dependencies.phf_shared_0_8_0]
package = "phf_shared"
version = "=0.8.0"

[dependencies.pin_project]
package = "pin-project"
version = "=1.0.10"

[dependencies.pin_project_internal]
package = "pin-project-internal"
version = "=1.0.10"

[dependencies.pin_project_lite]
package = "pin-project-lite"
version = "=0.2.8"

[dependencies.pin_utils]
package = "pin-utils"
version = "=0.1.0"

[dependencies.pkg_config]
package = "pkg-config"
version = "=0.3.24"

[dependencies.png]
package = "png"
version = "=0.17.5"

[dependencies.postgres]
package = "postgres"
version = "=0.19.2"

[dependencies.postgres_protocol]
package = "postgres-protocol"
version = "=0.6.3"

[dependencies.postgres_types]
package = "postgres-types"
version = "=0.2.2"

[dependencies.ppv_lite86]
package = "ppv-lite86"
version = "=0.2.16"

[dependencies.precomputed_hash]
package = "precomputed-hash"
version = "=0.1.1"

[dependencies.proc_macro2]
package = "proc-macro2"
version = "=1.0.36"
features = ["span-locations"]

[dependencies.proc_macro_hack]
package = "proc-macro-hack"
version = "=0.5.19"

[dependencies.quote]
package = "quote"
version = "=1.0.16"

[dependencies.rand]
package = "rand"
version = "=0.8.5"
features = ["serde1", "small_rng"]

[dependencies.rand_0_7_3]
package = "rand"
version = "=0.7.3"

[dependencies.rand_chacha]
package = "rand_chacha"
version = "=0.3.1"

[dependencies.rand_chacha_0_2_2]
package = "rand_chacha"
version = "=0.2.2"

[dependencies.rand_core]
package = "rand_core"
version = "=0.6.3"
features = ["alloc", "getrandom", "serde", "serde1", "std"]

[dependencies.rand_core_0_5_1]
package = "rand_core"
version = "=0.5.1"

[dependencies.rand_distr]
package = "rand_distr"
version = "=0.4.3"

[dependencies.rand_hc]
package = "rand_hc"
version = "=0.3.1"

[dependencies.rand_pcg]
package = "rand_pcg"
version = "=0.2.1"

[dependencies.rawpointer]
package = "rawpointer"
version = "=0.2.1"

[dependencies.rayon]
package = "rayon"
version = "=1.5.1"

[dependencies.rayon_core]
package = "rayon-core"
version = "=1.9.1"

[dependencies.regex]
package = "regex"
version = "=1.5.5"

[dependencies.regex_automata]
package = "regex-automata"
version = "=0.1.10"

[dependencies.regex_syntax]
package = "regex-syntax"
version = "=0.6.25"

[dependencies.remove_dir_all]
package = "remove_dir_all"
version = "=0.5.3"

[dependencies.reqwest]
package = "reqwest"
version = "=0.11.10"
features = ["blocking", "cookies", "json", "multipart"]

[dependencies.ring]
package = "ring"
version = "=0.16.20"

[dependencies.rusqlite]
package = "rusqlite"
version = "=0.27.0"
features = ["bundled-full"]

[dependencies.rustc_demangle]
package = "rustc-demangle"
version = "=0.1.21"

[dependencies.rustc_version]
package = "rustc_version"
version = "=0.4.0"

[dependencies.ryu]
package = "ryu"
version = "=1.0.9"

[dependencies.safe_arch]
package = "safe_arch"
version = "=0.6.0"

[dependencies.same_file]
package = "same-file"
version = "=1.0.6"

[dependencies.scoped_threadpool]
package = "scoped_threadpool"
version = "=0.1.9"

[dependencies.scopeguard]
package = "scopeguard"
version = "=1.1.0"

[dependencies.select]
package = "select"
version = "=0.5.0"

[dependencies.semver]
package = "semver"
version = "=1.0.6"

[dependencies.semver_parser]
package = "semver-parser"
version = "=0.10.2"

[dependencies.serde]
package = "serde"
version = "=1.0.136"
features = ["derive", "rc"]

[dependencies.serde_derive]
package = "serde_derive"
version = "=1.0.136"

[dependencies.serde_json]
package = "serde_json"
version = "=1.0.79"
features = ["raw_value"]

[dependencies.serde_urlencoded]
package = "serde_urlencoded"
version = "=0.7.1"

[dependencies.serde_value]
package = "serde-value"
version = "=0.7.0"

[dependencies.serde_yaml]
package = "serde_yaml"
version = "=0.8.23"

[dependencies.sha2]
package = "sha2"
version = "=0.10.2"

[dependencies.simba]
package = "simba"
version = "=0.7.1"

[dependencies.siphasher]
package = "siphasher"
version = "=0.3.10"

[dependencies.slab]
package = "slab"
version = "=0.4.5"

[dependencies.smallvec]
package = "smallvec"
version = "=1.8.0"

[dependencies.smawk]
package = "smawk"
version = "=0.3.1"

[dependencies.socket2]
package = "socket2"
version = "=0.4.4"
features = ["all"]

[dependencies.spin]
package = "spin"
version = "=0.9.2"

[dependencies.spin_0_5_2]
package = "spin"
version = "=0.5.2"

[dependencies.string_cache]
package = "string_cache"
version = "=0.8.3"

[dependencies.string_cache_codegen]
package = "string_cache_codegen"
version = "=0.5.1"

[dependencies.stringprep]
package = "stringprep"
version = "=0.1.2"

[dependencies.strsim]
package = "strsim"
version = "=0.10.0"

[dependencies.subtle]
package = "subtle"
version = "=2.4.1"

[dependencies.syn]
package = "syn"
version = "=1.0.89"
features = ["extra-traits", "fold", "full", "visit", "visit-mut"]

[dependencies.tar]
package = "tar"
version = "=0.4.38"

[dependencies.tempfile]
package = "tempfile"
version = "=3.3.0"

[dependencies.tendril]
package = "tendril"
version = "=0.4.2"

[dependencies.termcolor]
package = "termcolor"
version = "=1.1.3"

[dependencies.textwrap]
package = "textwrap"
version = "=0.15.0"

[dependencies.thiserror]
package = "thiserror"
version = "=1.0.30"

[dependencies.thiserror_impl]
package = "thiserror-impl"
version = "=1.0.30"

[dependencies.thread_id]
package = "thread-id"
version = "=3.3.0"

[dependencies.thread_local]
package = "thread_local"
version = "=1.1.4"

[dependencies.threadpool]
package = "threadpool"
version = "=1.8.1"

[dependencies.tiff]
package = "tiff"
version = "=0.7.1"

[dependencies.time]
package = "time"
version = "=0.3.9"

[dependencies.time_0_1_44]
package = "time"
version = "=0.1.44"

[dependencies.tinyvec]
package = "tinyvec"
version = "=1.5.1"
features = ["alloc", "grab_spare_slice", "rustc_1_40", "rustc_1_55", "serde", "std"]

[dependencies.tinyvec_macros]
package = "tinyvec_macros"
version = "=0.1.0"

[dependencies.tokio]
package = "tokio"
version = "=1.17.0"
features = ["full", "test-util"]

[dependencies.tokio_native_tls]
package = "tokio-native-tls"
version = "=0.3.0"

[dependencies.tokio_postgres]
package = "tokio-postgres"
version = "=0.7.5"

[dependencies.tokio_util]
package = "tokio-util"
version = "=0.6.9"

[dependencies.toml]
package = "toml"
version = "=0.5.8"

[dependencies.tower_service]
package = "tower-service"
version = "=0.3.1"

[dependencies.tracing]
package = "tracing"
version = "=0.1.32"

[dependencies.tracing_core]
package = "tracing-core"
version = "=0.1.23"

[dependencies.traitobject]
package = "traitobject"
version = "=0.1.0"

[dependencies.try_lock]
package = "try-lock"
version = "=0.2.3"

[dependencies.typemap]
package = "typemap"
version = "=0.3.3"

[dependencies.typenum]
package = "typenum"
version = "=1.15.0"

[dependencies.ucd_trie]
package = "ucd-trie"
version = "=0.1.3"

[dependencies.unicode_bidi]
package = "unicode-bidi"
version = "=0.3.7"

[dependencies.unicode_linebreak]
package = "unicode-linebreak"
version = "=0.1.2"

[dependencies.unicode_normalization]
package = "unicode-normalization"
version = "=0.1.19"

[dependencies.unicode_segmentation]
package = "unicode-segmentation"
version = "=1.9.0"

[dependencies.unicode_width]
package = "unicode-width"
version = "=0.1.9"

[dependencies.unicode_xid]
package = "unicode-xid"
version = "=0.2.2"

[dependencies.unsafe_any]
package = "unsafe-any"
version = "=0.4.2"

[dependencies.untrusted]
package = "untrusted"
version = "=0.7.1"

[dependencies.url]
package = "url"
version = "=2.2.2"

[dependencies.utf8]
package = "utf-8"
version = "=0.7.6"

[dependencies.vcpkg]
package = "vcpkg"
version = "=0.2.15"

[dependencies.vec_map]
package = "vec_map"
version = "=0.8.2"

[dependencies.version_check]
package = "version_check"
version = "=0.9.4"

[dependencies.walkdir]
package = "walkdir"
version = "=2.3.2"

[dependencies.want]
package = "want"
version = "=0.3.0"

[dependencies.weezl]
package = "weezl"
version = "=0.1.5"

[dependencies.wide]
package = "wide"
version = "=0.7.4"

[dependencies.winapi]
package = "winapi"
version = "=0.3.9"

[dependencies.xattr]
package = "xattr"
version = "=0.2.2"

[dependencies.xml5ever]
package = "xml5ever"
version = "=0.16.2"

[dependencies.yaml_rust]
package = "yaml-rust"
version = "=0.4.5"
