[package]
name = "playground"
version = "0.0.1"
authors = ["The Rust Playground"]
resolver = "2"
[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
incremental = false
[dependencies.aho_corasick]
package = "aho-corasick"
version = "=0.7.18"

[dependencies.ansi_term]
package = "ansi_term"
version = "=0.12.1"

[dependencies.atty]
package = "atty"
version = "=0.2.14"

[dependencies.autocfg]
package = "autocfg"
version = "=1.1.0"

[dependencies.base64]
package = "base64"
version = "=0.13.0"

[dependencies.bincode]
package = "bincode"
version = "=1.3.3"

[dependencies.bindgen]
package = "bindgen"
version = "=0.59.2"

[dependencies.bitflags]
package = "bitflags"
version = "=1.3.2"

[dependencies.bumpalo]
package = "bumpalo"
version = "=3.9.1"

[dependencies.bytes]
package = "bytes"
version = "=1.1.0"

[dependencies.cc]
package = "cc"
version = "=1.0.73"

[dependencies.cexpr]
package = "cexpr"
version = "=0.6.0"

[dependencies.cfg_if]
package = "cfg-if"
version = "=1.0.0"

[dependencies.clang_sys]
package = "clang-sys"
version = "=1.3.1"

[dependencies.clap]
package = "clap"
version = "=2.34.0"

[dependencies.cmake]
package = "cmake"
version = "=0.1.48"

[dependencies.crossbeam]
package = "crossbeam"
version = "=0.8.1"

[dependencies.crossbeam_channel]
package = "crossbeam-channel"
version = "=0.5.4"

[dependencies.crossbeam_deque]
package = "crossbeam-deque"
version = "=0.8.1"

[dependencies.crossbeam_epoch]
package = "crossbeam-epoch"
version = "=0.9.8"

[dependencies.crossbeam_queue]
package = "crossbeam-queue"
version = "=0.3.5"

[dependencies.crossbeam_utils]
package = "crossbeam-utils"
version = "=0.8.8"

[dependencies.either]
package = "either"
version = "=1.6.1"

[dependencies.emsdk]
package = "emsdk"
version = "=0.1.1"

[dependencies.encoding_rs]
package = "encoding_rs"
version = "=0.8.31"

[dependencies.env_logger]
package = "env_logger"
version = "=0.9.0"

[dependencies.fixedbitset]
package = "fixedbitset"
version = "=0.4.1"

[dependencies.fnv]
package = "fnv"
version = "=1.0.7"

[dependencies.foreign_types]
package = "foreign-types"
version = "=0.3.2"

[dependencies.foreign_types_shared]
package = "foreign-types-shared"
version = "=0.1.1"

[dependencies.form_urlencoded]
package = "form_urlencoded"
version = "=1.0.1"

[dependencies.fs_extra]
package = "fs_extra"
version = "=1.2.0"

[dependencies.futures_channel]
package = "futures-channel"
version = "=0.3.21"

[dependencies.futures_core]
package = "futures-core"
version = "=0.3.21"

[dependencies.futures_io]
package = "futures-io"
version = "=0.3.21"

[dependencies.futures_sink]
package = "futures-sink"
version = "=0.3.21"

[dependencies.futures_task]
package = "futures-task"
version = "=0.3.21"

[dependencies.futures_util]
package = "futures-util"
version = "=0.3.21"

[dependencies.glob]
package = "glob"
version = "=0.3.0"

[dependencies.h2]
package = "h2"
version = "=0.3.13"

[dependencies.hashbrown]
package = "hashbrown"
version = "=0.11.2"

[dependencies.http]
package = "http"
version = "=0.2.7"

[dependencies.http_body]
package = "http-body"
version = "=0.4.4"

[dependencies.httparse]
package = "httparse"
version = "=1.7.1"

[dependencies.httpdate]
package = "httpdate"
version = "=1.0.2"

[dependencies.humantime]
package = "humantime"
version = "=2.1.0"

[dependencies.hyper]
package = "hyper"
version = "=0.14.18"
features = ["full"]

[dependencies.hyper_tls]
package = "hyper-tls"
version = "=0.5.0"

[dependencies.idna]
package = "idna"
version = "=0.2.3"

[dependencies.indexmap]
package = "indexmap"
version = "=1.8.1"

[dependencies.ipnet]
package = "ipnet"
version = "=2.5.0"

[dependencies.itoa]
package = "itoa"
version = "=1.0.2"

[dependencies.lazy_static]
package = "lazy_static"
version = "=1.4.0"

[dependencies.lazycell]
package = "lazycell"
version = "=1.3.0"

[dependencies.libc]
package = "libc"
version = "=0.2.126"

[dependencies.libloading]
package = "libloading"
version = "=0.7.3"

[dependencies.link_cplusplus]
package = "link-cplusplus"
version = "=1.0.6"

[dependencies.log]
package = "log"
version = "=0.4.17"

[dependencies.matches]
package = "matches"
version = "=0.1.9"

[dependencies.memchr]
package = "memchr"
version = "=2.5.0"

[dependencies.memoffset]
package = "memoffset"
version = "=0.6.5"

[dependencies.mime]
package = "mime"
version = "=0.3.16"

[dependencies.minimal_lexical]
package = "minimal-lexical"
version = "=0.2.1"

[dependencies.mio]
package = "mio"
version = "=0.8.3"
features = ["net", "os-ext", "os-poll"]

[dependencies.native_tls]
package = "native-tls"
version = "=0.2.10"

[dependencies.nom]
package = "nom"
version = "=7.1.1"

[dependencies.num]
package = "num"
version = "=0.4.0"

[dependencies.num_bigint]
package = "num-bigint"
version = "=0.4.3"

[dependencies.num_complex]
package = "num-complex"
version = "=0.4.1"

[dependencies.num_cpus]
package = "num_cpus"
version = "=1.13.1"

[dependencies.num_integer]
package = "num-integer"
version = "=0.1.45"

[dependencies.num_iter]
package = "num-iter"
version = "=0.1.43"

[dependencies.num_rational]
package = "num-rational"
version = "=0.4.0"

[dependencies.num_traits]
package = "num-traits"
version = "=0.2.15"

[dependencies.once_cell]
package = "once_cell"
version = "=1.10.0"

[dependencies.openssl]
package = "openssl"
version = "=0.10.40"

[dependencies.openssl_macros]
package = "openssl-macros"
version = "=0.1.0"

[dependencies.openssl_probe]
package = "openssl-probe"
version = "=0.1.5"

[dependencies.openssl_sys]
package = "openssl-sys"
version = "=0.9.73"

[dependencies.peeking_take_while]
package = "peeking_take_while"
version = "=0.1.2"

[dependencies.percent_encoding]
package = "percent-encoding"
version = "=2.1.0"

[dependencies.petgraph]
package = "petgraph"
version = "=0.6.0"

[dependencies.pin_project_lite]
package = "pin-project-lite"
version = "=0.2.9"

[dependencies.pin_utils]
package = "pin-utils"
version = "=0.1.0"

[dependencies.pkg_config]
package = "pkg-config"
version = "=0.3.25"

[dependencies.proc_macro2]
package = "proc-macro2"
version = "=1.0.39"
features = ["span-locations"]

[dependencies.quote]
package = "quote"
version = "=1.0.18"

[dependencies.rayon]
package = "rayon"
version = "=1.5.3"

[dependencies.rayon_core]
package = "rayon-core"
version = "=1.9.3"

[dependencies.regex]
package = "regex"
version = "=1.5.5"

[dependencies.regex_syntax]
package = "regex-syntax"
version = "=0.6.25"

[dependencies.reqwest]
package = "reqwest"
version = "=0.11.10"
features = ["blocking", "cookies", "json", "multipart"]

[dependencies.rlp]
package = "rlp"
version = "=0.5.1"

[dependencies.rustc_hash]
package = "rustc-hash"
version = "=1.1.0"

[dependencies.rustc_hex]
package = "rustc-hex"
version = "=2.1.0"

[dependencies.ryu]
package = "ryu"
version = "=1.0.10"

[dependencies.scopeguard]
package = "scopeguard"
version = "=1.1.0"

[dependencies.seal_fhe]
package = "seal_fhe"
version = "=0.5.0"

[dependencies.semver]
package = "semver"
version = "=1.0.9"

[dependencies.serde]
package = "serde"
version = "=1.0.137"
features = ["derive", "rc"]

[dependencies.serde_derive]
package = "serde_derive"
version = "=1.0.137"

[dependencies.serde_urlencoded]
package = "serde_urlencoded"
version = "=0.7.1"

[dependencies.shlex]
package = "shlex"
version = "=1.1.0"

[dependencies.slab]
package = "slab"
version = "=0.4.6"

[dependencies.socket2]
package = "socket2"
version = "=0.4.4"
features = ["all"]

[dependencies.strsim]
package = "strsim"
version = "=0.8.0"

[dependencies.sunscreen]
package = "sunscreen"
version = "=0.5.0"

[dependencies.sunscreen_backend]
package = "sunscreen_backend"
version = "=0.5.0"

[dependencies.sunscreen_compiler_macros]
package = "sunscreen_compiler_macros"
version = "=0.5.0"

[dependencies.sunscreen_fhe_program]
package = "sunscreen_fhe_program"
version = "=0.5.0"

[dependencies.sunscreen_runtime]
package = "sunscreen_runtime"
version = "=0.5.0"

[dependencies.syn]
package = "syn"
version = "=1.0.95"
features = ["extra-traits", "fold", "full", "visit", "visit-mut"]

[dependencies.termcolor]
package = "termcolor"
version = "=1.1.3"

[dependencies.textwrap]
package = "textwrap"
version = "=0.11.0"

[dependencies.tinyvec]
package = "tinyvec"
version = "=1.6.0"
features = ["alloc", "grab_spare_slice", "rustc_1_40", "rustc_1_55", "serde", "std"]

[dependencies.tinyvec_macros]
package = "tinyvec_macros"
version = "=0.1.0"

[dependencies.tokio]
package = "tokio"
version = "=1.18.2"
features = ["full", "test-util"]

[dependencies.tokio_native_tls]
package = "tokio-native-tls"
version = "=0.3.0"

[dependencies.tokio_util]
package = "tokio-util"
version = "=0.7.2"

[dependencies.tower_service]
package = "tower-service"
version = "=0.3.1"

[dependencies.tracing]
package = "tracing"
version = "=0.1.34"

[dependencies.tracing_attributes]
package = "tracing-attributes"
version = "=0.1.21"

[dependencies.tracing_core]
package = "tracing-core"
version = "=0.1.26"

[dependencies.try_lock]
package = "try-lock"
version = "=0.2.3"

[dependencies.unicode_bidi]
package = "unicode-bidi"
version = "=0.3.8"

[dependencies.unicode_ident]
package = "unicode-ident"
version = "=1.0.0"

[dependencies.unicode_normalization]
package = "unicode-normalization"
version = "=0.1.19"

[dependencies.unicode_width]
package = "unicode-width"
version = "=0.1.9"

[dependencies.url]
package = "url"
version = "=2.2.2"

[dependencies.vec_map]
package = "vec_map"
version = "=0.8.2"

[dependencies.want]
package = "want"
version = "=0.3.0"

[dependencies.which]
package = "which"
version = "=4.2.5"
