[package]
name = "hello_world"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
web-sys = "^0.3"
js-sys = "^0.3"
wasm-bindgen-futures = "^0.4"
yew = "0.17"
seed = "0.8.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false