[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
asm-cleanup = { path = "../asm-cleanup" }
bincode = { version = "1.3", default-features = false }
futures = { version = "0.3.28", default-features = false, features = ["executor"] }
modify-cargo-toml = { path = "../modify-cargo-toml", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
snafu = { version = "0.7.4", default-features = false, features = ["futures", "std"] }
tokio = { version = "1.28", default-features = false, features = ["fs", "io-std", "io-util", "macros", "process", "rt", "time", "sync"] }
tokio-stream = { version = "0.1.14", default-features = false }
tokio-util = { version = "0.7.8", default-features = false, features = ["io", "io-util"] }
toml = { version = "0.8.2", default-features = false, features = ["parse", "display"] }
tracing = { version = "0.1.37", default-features = false, features = ["attributes"] }

[dev-dependencies]
assert_matches = "1.5.0"
assertables = "7.0.1"
once_cell = "1.18.0"
tempdir = "0.3.7"
tracing-subscriber = "0.3.17"
