[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[workspace]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(force_docker)'] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
asm-cleanup = { path = "../asm-cleanup" }
bincode = { version = "1.3", default-features = false }
futures = { version = "0.3.28", default-features = false, features = ["executor"] }
modify-cargo-toml = { path = "../modify-cargo-toml", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.108", default-features = false, features = ["std"] }
snafu = { version = "0.8.0", default-features = false, features = ["futures", "std"] }
strum_macros = { version = "0.27.1", default-features = false }
tokio = { version = "1.28", default-features = false, features = ["fs", "io-std", "io-util", "macros", "process", "rt", "time", "sync"] }
tokio-stream = { version = "0.1.14", default-features = false }
tokio-util = { version = "0.7.8", default-features = false, features = ["io", "io-util", "rt"] }
toml = { version = "0.8.2", default-features = false, features = ["parse", "display"] }
tracing = { version = "0.1.37", default-features = false, features = ["attributes"] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.17.0", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
libc = { version = "0.2.150", default-features = false }
mach2 = { version = "0.4.1", default-features = false }

[dev-dependencies]
assert_matches = "1.5.0"
assertables = "9.3.0"
tempfile = "3.10.1"
tracing-subscriber = "0.3.17"
